--- a/태연Pjt/op.gg_statistics.html
+++ b/태연Pjt/op.gg_statistics.html
@@ -296,8 +296,8 @@
             style="height: 100%; float: left; padding-top: 12px; padding-bottom: 12px;"
           >
             <a
-              href="https://naver.com"
-              style="color: rgb(179, 205, 255); font-size: 95%"
+              href="/opgg.html"
+              style="color: rgb(179, 205, 255); font-size: 95%; text-decoration: none"
               >홈</a
             >
           </div>
@@ -305,15 +305,15 @@
             style="height: 100%; float: left; padding-top: 12px; padding-bottom: 12px; position: relative; left: 22px;"
           >
             <a
-              href="https://naver.com"
-              style="color: rgb(179, 205, 255); font-size: 95%"
+              href="..."
+              style="color: rgb(179, 205, 255); font-size: 95%; text-decoration: none"
               >잼피언 분석</a
             >
           </div>
           <div
             style="height: 100%; float: left; padding-top: 12px; padding-bottom: 12px; position: relative; left: 38px;  border-bottom: 3px solid white"
           >
-            <a href="https://naver.com" style="color: white; font-size: 95%"
+            <a href="/op.gg_statistics.html" style="color: white; font-size: 95%; text-decoration: none"
               >통계</a
             >
           </div>
@@ -321,8 +321,8 @@
             style="height: 100%; float: left; padding-top: 12px; padding-bottom: 12px; position: relative; left: 54px;"
           >
             <a
-              href="https://naver.com"
-              style="color: rgb(179, 205, 255); font-size: 95%"
+              href="/op.gg_ranking.html"
+              style="color: rgb(179, 205, 255); font-size: 95%; text-decoration: none"
               >랭킹</a
             >
           </div>
@@ -330,8 +330,8 @@
             style="height: 100%; float: left; padding-top: 12px; padding-bottom: 12px; position: relative; left: 70px;"
           >
             <a
-              href="https://naver.com"
-              style="color: rgb(179, 205, 255); font-size: 95%"
+              href="..."
+              style="color: rgb(179, 205, 255); font-size: 95%; text-decoration: none"
               >프로관전</a
             >
           </div>
@@ -339,8 +339,8 @@
             style="height: 100%; float: left; padding-top: 12px; padding-bottom: 12px; position: relative; left: 90px;"
           >
             <a
-              href="https://naver.com"
-              style="color: rgb(179, 205, 255); font-size: 95%"
+              href="..."
+              style="color: rgb(179, 205, 255); font-size: 95%; text-decoration: none"
               >커뮤티니</a
             >
           </div>
